--- a/data/styles.css
+++ b/data/styles.css
@@ -50,7 +50,8 @@ body {
 
 .tabela {
     background-color: white;
-    border: 3px solid black
+    border: 3px solid black;
+    margin-bottom: 20px;
 }
 
 .linhas {
